responsive footer section added

--- a/index.html
+++ b/index.html
@@ -471,6 +471,134 @@
 
 
     </main>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-container-company">
+                <img src="assets/logo/name-logo.svg" alt="">
+                <p class="title-p">We are a web hosting company with a mission to help everyone who goes online succeed.
+                    We accomplish this by continuously developing server technology, giving expert assistance, and
+                    ensuring a flawless
+                    online website hosting experience.</p>
+                <ul class="payment">
+                    <li>
+                        <img src="https://assets.hostinger.com/images/payments/homepage-2020-payments/visa-5d68dadf24.png"
+                            alt="visa">
+                    </li>
+                    <li>
+                        <img src="https://assets.hostinger.com/images/payments/homepage-2020-payments/mastercard-ca75c7f8d3.png"
+                            alt="mastercard">
+                    </li>
+                    <li>
+                        <img src="https://assets.hostinger.com/images/payments/homepage-2020-payments/discover-1e5edf3f39.png"
+                            alt="discover">
+                    </li>
+                    <li>
+                        <img src="https://assets.hostinger.com/images/payments/homepage-2020-payments/rupay-2bad18f6df.png"
+                            alt="rupay">
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-container-box">
+                <div class="footer-container-hosting footer-container-box-item">
+                    <h2 class="title-h1">hosting</h2>
+                    <ul>
+                        <li><a href="#">Web hosting</a></li>
+                        <li><a href="#">VPS hosting</a></li>
+                        <li><a href="#">Minecraft Server hosting</a></li>
+                        <li><a href="#">CyberPanel hosting</a></li>
+                        <li><a href="#">Cloud hosting</a></li>
+                        <li><a href="#">Wordpress hosting</a></li>
+                        <li><a href="#">Email hosting</a></li>
+                        <li><a href="#">CMS hosting</a></li>
+                        <li><a href="#">Free Web Hosting</a></li>
+                        <li><a href="#">Online Store</a></li>
+                        <li><a href="#">Website Builder</a></li>
+                        <li><a href="#">Buy Hosting</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-container-domain footer-container-box-item">
+                    <h2 class="title-h1">
+                        Domain
+                    </h2>
+                    <ul>
+                        <li><a href="#">Domain Name Search</a></li>
+                        <li><a href="#">Domain Transfer</a></li>
+                        <li><a href="#">Free Domain Name</a></li>
+                        <li><a href="#">XYZ Domain</a></li>
+                        <li><a href="#">Cheap Domain</a></li>
+                        <li><a href="#">Whois lookup</a></li>
+                        <li><a href="#">Free SSL Certificate</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-container-information footer-container-box-item">
+                    <h2 class="title-h1">Information</h2>
+                    <ul>
+                        <li>
+                            <a href="#">Migrate to Hostinger</a>
+                        </li>
+                        <li>
+                            <a href="#">System Status</a>
+                        </li>
+                        <li>
+                            <a href="#">Payment Methods</a>
+                        </li>
+                        <li>
+                            <a href="#">Rewards</a>
+                        </li>
+                        <li>
+                            <a href="#">Reviews</a>
+                        </li>
+                        <li>
+                            <a href="#">pricing</a>
+                        </li>
+                        <li>
+                            <a href="#">sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer-container-about footer-container-box-item">
+                    <h2 class="title-h1">company</h2>
+                    <ul>
+                        <li><a href="#">About Hostinger</a></li>
+                        <li><a href="#">Our Technology</a></li>
+                        <li><a href="#">Roadmap</a></li>
+                        <li><a href="#">Customer care</a></li>
+                        <li><a href="#">privacy policy</a></li>
+                        <li><a href="#">Terms of services</a></li>
+                        <li><a href="#">blog</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="social">
+                <ul>
+                    <li><a href="#"><img
+                                src="https://assets.hostinger.com/images/footer/socials/2020/linked-in-6483ac5eaf.svg"
+                                alt="linkiden"></a></li>
+                    <li><a href="#"><img
+                                src="https://assets.hostinger.com/images/footer/socials/2020/facebook-aae08bebe5.svg"
+                                alt="facebook"></a></li>
+                    <li><a href="#"><img
+                                src="https://assets.hostinger.com/images/footer/socials/2020/instagram-19e7bf8e7d.svg"
+                                alt="instagram"></a></li>
+                    <li><a href="#"><img
+                                src="https://assets.hostinger.com/images/footer/socials/2020/twitter-12500689a0.svg"
+                                alt="twitter"></a></li>
+                    <li><a href="#"><img
+                                src="https://assets.hostinger.com/images/footer/socials/2020/youtube-10b297f40e.svg"
+                                alt=""></a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <h1>Design and Developed By <a href="https://github.com/SM8UTI"> 🧑 SM8UTI</a> - 2022 </h1>
+            </div>
+        </div>
+        <!-- <ul class="footer-social">
+            <li></li>
+        </ul> -->
+    </footer>
     <script src="dist/js/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
