--- a/index.html
+++ b/index.html
@@ -592,7 +592,8 @@
                 </ul>
             </div>
             <div class="copyright">
-                <h1>Design and Developed By <a href="https://github.com/SM8UTI"> 🧑 SM8UTI</a> - 2022 </h1>
+                <h1>Design and Developed By <a href="https://github.com/SM8UTI"> 🧑 SM8UTI & T. Prabin Patra</a> - 2022
+                </h1>
             </div>
         </div>
         <!-- <ul class="footer-social">
